# docuxtract

./: .dockerignore  .gitignore  README.md  dev.configmap.yml  docker-compose.yml  dockerfile  dockerfile-mistral  entrypoint.sh  gpt.yml  invoice.xml  k8s.yml  kubernetes.yml  main.py  pipeline.py  podman-install.sh  pyproject.toml  requirements.sh  requirements.txt  test
.github/workflows/: deploy.yml
docker/: Dockerfile.alpine-backend  Dockerfile.backend  Dockerfile.ollama
k8s/: backend.yml  cert-manager.yml  ingress.yml  namespace.yml  ollama.yml  tesseract.yml
src/: __init__.py
src/S3/: __init__.py
src/auth/: custom_exceptions.py  dependencies.py  json_web_token.py
src/cls_generator/: __init__.py
src/controllers/: files_controller.py  pipelines_controller.py  schemas_controller.py
src/dtos/: json_schema_dto.py  ocr_file_dto.py  option_dto.py  schema_dto.py
src/entities/: file_entity.py  json_schema_entity.py  s3_file_entity.py  schema_entity.py
src/enums/: ocr_file_type.py
src/infrastructure/S3/: __init__.py
src/infrastructure/mongodb/: __init__.py  files_collection.py  schema_collection.py  schemas_collection.py
src/llm/: __init__.py
src/logger/: __init__.py
src/mongodb/: __init__.py  file_collection.py  mongo_client.py  schema_collection.py
src/ocr/: __init__.py
src/pipelines/: __init__.py
src/services/: files_service.py  rag_pipeline_service.py
src/services/llm/: __init__.py
src/services/ocr/: __init__.py  extract_text_with_tesseract.py  ocr_file_handler_context.py  ocr_file_handler_strategy.py  preprocess_image.py
src/services/ocr/strategies/: docx_strategy.py  image_strategy.py  pdf_strategy.py  txt_strategy.py
src/utils/: __init__.py
src/views/: option_view.py
