[project]
name = "docuxtract"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beanie>=1.26.0",
    "fastapi[standard]>=0.115.0",
    "instructor>=1.4.3",
    "llama-index-embeddings-huggingface>=0.3.1",
    "llama-index-llms-mistralai>=0.2.5",
    "llama-index-llms-ollama>=0.3.2",
    "llama-index>=0.11.12",
    "motor>=3.6.0",
    "openai>=1.47.0",
    "pillow>=10.4.0",
    "pymongo>=4.9.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
]
